tests/reject/bad_add.ul
void foo() {}
void main() {
     int x = foo() + 1;
}